# spin-trigger-tailscale

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  spin-pluginify.toml
crates/trigger-http-tsnet/: Cargo.toml
crates/trigger-http-tsnet/src/: lib.rs  spin.rs
src/: main.rs
